programs/2-typecheck/invalid/example/3.7-assignment-constantLhs.go
// assignment expected lvalue
package test

func foo() {
	false = false
}